# WiChain

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  hardhat.config.cjs  index.html  package-lock.json  package.json  start_instruction.md  vite.config.ts
LICENSE/: Code-component-3-98.tsx
Makefile/: Code-component-3-97.tsx
applets/example-applet/: Cargo.toml
applets/example-applet/src/: lib.rs
scripts/: deploy.js
server/: package-lock.json  package.json  tsconfig.json
server/prisma/: dev.db  schema.prisma  seed.ts
server/src/: index.ts
server/src/routes/: applets.ts  auth.ts  executions.ts  settings.ts
src/: main.tsx  vite-env.d.ts
src/app/: App.tsx
src/app/components/: AddNetworkModal.tsx  AnimatedCard.tsx  AppletCard.tsx  AppletInvokeSheet.tsx  AppletMarketplace.tsx  BackgroundPattern.tsx  BottomNav.tsx  CategoryFilter.tsx  FloatingActionButton.tsx  Header.tsx  InvokeModal.tsx  LoadingState.tsx  NetworkStatus.tsx  RecentExecutions.tsx  Sidebar.tsx  SuccessAnimation.tsx  TopBar.tsx  WalletOverview.tsx
src/app/context/: PersonalizationContext.tsx
src/app/data/: mockData.ts
src/app/pages/: ActivityPage.tsx  HomePage.tsx  PortfolioPage.tsx  SettingsPage.tsx
src/config/: contracts.json
src/services/: api.ts  socket.ts
src/styles/: theme.css
