[package]
name = "example-applet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies for WASM
wasm-bindgen = "0.2"

# WeilChain SDK (mock - would be actual SDK in production)
# weilchain-sdk = { git = "https://github.com/weilchain/sdk-rust" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for HTLC
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units
panic = "abort"     # Abort on panic (reduces binary size)
strip = true        # Strip symbols from binary
